--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -13,6 +13,7 @@
     "fuse.js": "^6.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.1",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
     "react-jsx-parser": "^1.28.4",
