--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "fuse.js": "^6.4.6",
     "react": "^17.0.2",
+    "react-code-blocks": "*",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
     "react-hot-toast": "^2.1.1",
