--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "ace-builds": "^1.4.13",
     "axios": "^0.21.4",
     "fuse.js": "^6.4.6",
     "react": "^17.0.2",
+    "react-ace": "^9.4.4",
     "react-code-blocks": "*",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.1",
